--- a/lbvserver/Jenkinsfile
+++ b/lbvserver/Jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
     stage('Terraform Init') {
       steps {
          powershell("""
-            cd lbvserver1
+            cd lbvserver
             terraform init
           """)
        }
@@ -15,7 +15,7 @@ pipeline {
      stage('Terraform Plan') {
        steps {
           powershell("""
-            cd lbvserver1
+            cd lbvserver
             terraform plan -var-file="../secret.tfvars"
           """)
         }
@@ -23,7 +23,7 @@ pipeline {
      stage('Terraform Apply') {
       steps {
           powershell("""
-            cd lbvserver1
+            cd lbvserver
             terraform apply -var-file="../secret.tfvars" -auto-approve
           """)
         }
